--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ packaging==25.0
 pathspec==0.12.1
 platformdirs==4.4.0
 psycopg2-binary==2.9.10
+pytest==7.4.3
+pytest-django==4.7.0
 python-decouple==3.8
 pytokens==0.1.10
 pytz==2025.2
