--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.9.2
 black==25.9.0
+celery==5.3.4
 click==8.3.0
-Django==5.2.7
+Django==5.1.13
+django-celery-beat==2.7.0
 djangorestframework==3.16.1
 drf-yasg==1.21.11
+redis==5.0.1
 inflection==0.5.1
 mypy_extensions==1.1.0
 packaging==25.0
