--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,46 @@
+amqp==5.3.1
 asgiref==3.9.2
+billiard==4.2.2
 black==25.9.0
 celery==5.3.4
 click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+coverage==7.10.7
+cron_descriptor==2.0.6
 Django==5.1.13
 django-celery-beat==2.7.0
+django-timezone-field==7.1
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
-redis==5.0.1
 inflection==0.5.1
+iniconfig==2.1.0
+kombu==5.5.4
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.4.0
+pluggy==1.6.0
+prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
-pytest==7.4.3
-pytest-django==4.7.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.2
+pytest-cov==7.0.0
+pytest-django==4.11.1
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytokens==0.1.10
 pytz==2025.2
 PyYAML==6.0.3
+redis==5.0.1
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.15.0
+tzdata==2025.2
 uritemplate==4.2.0
+vine==5.1.0
+wcwidth==0.2.14
